--- a/fig.yml
+++ b/fig.yml
@@ -7,4 +7,10 @@ antenna:
     - triangle:triangle
   volumes:
     - antenna:/usr/src/app
+  ports:
+    - 5000:5000
+  environment:
+    CHIKKA_CLIENT_ID:
+    CHIKKA_SECRET_KEY:
+    CHIKKA_SHORTCODE:
 
