--- a/ernie/fig.yml
+++ b/ernie/fig.yml
@@ -1,16 +1,19 @@
-triangle:
-  build: triangle
-
 antenna:
   build: antenna
-  links:
-    - triangle:triangle
   volumes:
     - antenna:/usr/src/app
   ports:
     - 5000:5000
+  links:
+    - omniscient:omniscient
   environment:
     CHIKKA_CLIENT_ID:
     CHIKKA_SECRET_KEY:
     CHIKKA_SHORTCODE:
 
+omniscient:
+  build: omniscient
+  volumes:
+    - omniscient:/usr/src/app
+  ports:
+    - 4567:4567
