--- a/ernie/fig.yml
+++ b/ernie/fig.yml
@@ -7,6 +7,7 @@ antenna:
   links:
     - omniscient:omniscient
   environment:
+    WIT_ACCESS_TOKEN:
     CHIKKA_CLIENT_ID:
     CHIKKA_SECRET_KEY:
     CHIKKA_SHORTCODE:
