--- a/omniscient/Gemfile
+++ b/omniscient/Gemfile
@@ -4,13 +4,13 @@ ruby '2.1.3'
 # for app
 gem 'sinatra'
 gem 'thin'
+gem 'shotgun'
 
 group :application do
   # Web services
   gem 'yahoo_weatherman', '~> 2.0.0'
   gem 'google_directions'
   gem 'wolfram-alpha', '~> 0.3.1'
-  gem 'imdb'
   gem 'nokogiri', '~> 1.6.3.1'
 end
 group :test do
